--- a/APITourism/APITourism.csproj
+++ b/APITourism/APITourism.csproj
@@ -250,6 +250,7 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="AuthorizeAttribute.cs" />
     <Compile Include="AuthServerProvider.cs" />
+    <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CmsController.cs" />
     <Compile Include="Controllers\DataController.cs" />
     <Compile Include="Controllers\GeneralPurposeController.cs" />
